force-app/main/default/objects/sma__MAEventBaseObj__c/sma__MAEventBaseObj__c.object-meta.xml
<CustomObject>
    <label>MapAnything Event Base Object</label>
    <nameField>
        <label>MapAnything Event Base Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Event Base Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>