force-app/main/default/objects/sma__MAEventBaseObj__c/fields/sma__EventObject__c.field-meta.xml
<CustomField>
    <fullName>sma__EventObject__c</fullName>
    <label>EventObject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>