force-app/main/default/objects/sma__MAEventBaseObj__c/fields/sma__Options__c.field-meta.xml
<CustomField>
    <fullName>sma__Options__c</fullName>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>