force-app/main/default/objects/sma__MAEventBaseObj__c/recordTypes/sma__Custom.recordType-meta.xml
<RecordType>
    <fullName>sma__Custom</fullName>
    <active>true</active>
    <label>Custom</label>
</RecordType>