force-app/main/default/objects/sma__MAEventBaseObj__c/recordTypes/sma__Standard.recordType-meta.xml
<RecordType>
    <fullName>sma__Standard</fullName>
    <active>true</active>
    <label>Standard</label>
</RecordType>