force-app/main/default/objects/sma__MAEventBaseObj__c/listViews/sma__All1.listView-meta.xml
<ListView>
    <fullName>sma__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>